git-annex (6.20151225) unstable; urgency=medium

  * annex.version increased to 6, but version 5 is also still supported.
  * The upgrade to version 6 is not done fully automatically, because
    upgrading a direct mode repository to version 6 will prevent old
    versions of git-annex from working in other clones of that repository.
  * smudge: New command, used for git smudge filter. 
    This will replace direct mode.
  * init: Configure .git/info/attributes to use git-annex as a smudge
    filter. Note that this changes the default behavior of git add in a
    newly initialized repository; it will add files to the annex.
  * unlock, lock: In v6 mode, unlocking a file changes it from a symlink to a
    pointer file, and this change can be committed to the git repository.
  * add: In v6 mode, adds modified files to the annex.
 
 -- Joey Hess <id@joeyh.name>  Tue, 08 Dec 2015 11:14:03 -0400

git-annex (5.20151209) UNRELEASED; urgency=medium

  * Add S3 features to git-annex version output.
  * webdav: When testing the WebDAV server, send a file with content.
    The empty file it was sending tickled bugs in some php WebDAV server.
  * fsck: Failed to honor annex.diskreserve when checking a remote.
  * Debian: Build depend on concurrent-output.

 -- Joey Hess <id@joeyh.name>  Thu, 10 Dec 2015 11:39:34 -0400

git-annex (5.20151208) unstable; urgency=medium

  * Build with -j1 again to get reproducible build.
  * Display progress meter in -J mode when copying from a local git repo,
    to a local git repo, and from a remote git repo.
  * Display progress meter in -J mode when downloading from the web.
  * map: Improve display of git remotes with non-ssh urls, including http
    and gcrypt. 
  * When core.sharedRepository is set, annex object files are not made mode
    444, since that prevents a user other than the file owner from locking
    them. Instead, a mode such as 664 is used in this case.
  * tahoe: Include tahoe capabilities in whereis display.