@@ -46,7 +46,7 @@ findOrGenUUID = do
 		else ifM (Annex.Branch.hasSibling <||> (isJust <$> Fields.getField Fields.autoInit))
 			( do
 				liftIO checkNotReadOnly
-				initialize Nothing
+				initialize Nothing Nothing
 				getUUID
 			, return NoUUID
 			)
