@@ -38,6 +38,6 @@ perform s = do
 		then return $ toUUID s
 		else Remote.nameToUUID s
 	storeUUID u
-	initialize'
+	initialize' Nothing
 	Annex.SpecialRemote.autoEnable
 	next $ return True
